tests/paczka1/fuzzy1/56381024.err
Error in line 9: kCes A992 36,7
Error in line 6: v0GEJ A992 47,3
Error in line 24: v0GEJ S533 12,8
Error in line 25: v0GEJ S326 2,9
